--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,16 +7,16 @@
 
     <fragment
         android:id="@+id/galleryFragment"
-        android:name="com.yourstar.gallery.GalleryFragment"
+        android:name="com.yourstar.pagergallery.GalleryFragment"
         android:label="Gallery"
         tools:layout="@layout/fragment_gallery">
         <action
-            android:id="@+id/action_galleryFragment_to_photoFragment"
-            app:destination="@id/photoFragment" />
+            android:id="@+id/action_galleryFragment_to_pagerPhotoFragment"
+            app:destination="@id/pagerPhotoFragment" />
     </fragment>
     <fragment
-        android:id="@+id/photoFragment"
-        android:name="com.yourstar.gallery.PhotoFragment"
-        android:label="Photo"
-        tools:layout="@layout/fragment_photo" />
+        android:id="@+id/pagerPhotoFragment"
+        android:name="com.yourstar.pagergallery.PagerPhotoFragment"
+        android:label="PagerPhoto"
+        tools:layout="@layout/fragment_pager_photo" />
 </navigation>
